--- a/eCommerce/dynamicstore.html
+++ b/eCommerce/dynamicstore.html
@@ -18,9 +18,9 @@
             </ul>
             <h1>The Generics</h1>
         </header>
-        <section id="music" class="container">
-            <h2>MUSIC</h2>
-            <div id ="music-content">
+        <section id="Products" class="container">
+            <h2>PRODUCTS</h2>
+            <!-- <div id ="music-content">
                 <div id='album1'>
                     <h3>Album 1</h3>
                     <div class="image-container">
@@ -61,12 +61,12 @@
                         <button class="shop-item-button" type='button'>ADD TO CART</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </section>
-        <section id="merch" class="container">
+        <!-- <section id="merch" class="container">
             <h2>MERCH</h2>
-            <div id="merch-content">
+            <!-- <div id="merch-content">
                 <div id="t-shirt">
                     <h3>T-Shirt</h3>
                     <div class="image-container">
@@ -87,9 +87,9 @@
                         <button class="shop-item-button" type='button'>ADD TO CART</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-        </section>
+        </section> -->
         <section id="cart" class="container">
             <h2>CART</h2>
             <button class="cancel">X</button>
@@ -143,7 +143,7 @@
         <div class="footer-icons">
             <ul>
                 <li><a href="https://www.youtube.com">
-                    <img src="./img/6260efc8fc9a9002669d2f4ad9956cc0.jpg" alt="">
+                    <img src="./img/Youtube Logo.png" alt="">
                 </a></li>
                 <li><a href="https://spotify.com">
                     <img src="./img/Spotify Logo.png" alt="">
@@ -154,5 +154,6 @@
             </ul>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
 </body>
 </html>
